--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <br>
             <button type="submit" name="vd" id="submit" class="sb">Submit</button>
             <br>
-            <span id="result" class="sp"></span>
+            <h2>Result :
+                <span id="result" class="sp"></span></h2>
         </form>
     </div>
 
